--- a/theme/index.scss
+++ b/theme/index.scss
@@ -21,3 +21,9 @@ html, body {
 .page-enter, .page-leave-active {
     opacity: 0;
 }
+.mb {
+    margin-bottom: 1rem;
+}
+.mb2 {
+    margin-bottom: 2rem;
+}
